# imaginary-hub

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: workspace-repo-analysis-2026-02-24.md
outputs/price-action-mag7-avgo/: AAPL_backtest.csv  AMZN_backtest.csv  AVGO_backtest.csv  GOOGL_backtest.csv  META_backtest.csv  MSFT_backtest.csv  NVDA_backtest.csv  TSLA_backtest.csv  benchmark_nav_by_symbol.csv  metrics_by_symbol.csv  portfolio_nav.csv  report.md  strategy_nav_by_symbol.csv
outputs/us-tech-demo/: features.csv  nav_detail.csv  portfolio_nav.csv  ranking.csv  report.md
src/imaginary_hub/: omnifinan_adapter.py  run_best_indicator_backtest.py  run_price_action_backtest.py  run_quant.py  strategy.py
src/imaginary_hub/apps/: tv_like_app.py  tv_like_streamlit.py
src/imaginary_hub/charts/: omnifinan_stock_figure.py  plotly_tv.py
src/imaginary_hub/config/: theme.py
src/imaginary_hub/data/: omnifinan_adapter.py
src/imaginary_hub/indicators/: base.py  builtin.py  engine.py
