[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imaginary-hub"
version = "0.1.0"
description = "Executable quant stock-selection and trading analysis powered by omnifinan"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "plotly>=5.0",
  "dash>=2.0",
]

[project.scripts]
imaginary-hub-tv = "imaginary_hub.apps.tv_like_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
